--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
   <properties>
     <java.version>1.8</java.version>
-    <spring.boot.version>2.0.0.BUILD-SNAPSHOT</spring.boot.version>
+    <spring.boot.version>2.0.1.RELEASE</spring.boot.version>
     <spring-cloud-openfeign.version>2.0.0.RC1</spring-cloud-openfeign.version>
     <spring-cloud-commons.version>2.0.0.BUILD-SNAPSHOT</spring-cloud-commons.version>
     <spring.cloud.k8s.version>0.3.0.BUILD-SNAPSHOT</spring.cloud.k8s.version>
