adding namespace to deployment env var

--- a/charts/spring-cloud-k8s-minion/templates/deployment.yaml
+++ b/charts/spring-cloud-k8s-minion/templates/deployment.yaml
@@ -19,6 +19,9 @@ spec:
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         ports:
         - containerPort: {{ .Values.service.internalPort }}
+        env:
+          - name: KUBERNETES_NAMESPACE
+            value: {{ .Release.Namespace }}
         livenessProbe:
           httpGet:
             path: {{ .Values.probePath }}
