--- a/charts/spring-cloud-k8s-minion/templates/deployment.yaml
+++ b/charts/spring-cloud-k8s-minion/templates/deployment.yaml
@@ -21,7 +21,10 @@ spec:
         - containerPort: {{ .Values.service.internalPort }}
         env:
           - name: KUBERNETES_NAMESPACE
-            value: {{ .Release.Namespace }}
+            valueFrom:
+              fieldRef:
+                fieldPath: metadata.namespace
+        serviceAccountName: {{ .Chart.Name }}        
         livenessProbe:
           httpGet:
             path: {{ .Values.probePath }}
