--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
-spring.application.name=one-eyed-minion
+spring.application.name=spring-cloud-k8s-minion
 spring.cloud.discovery.enabled=true
 server.port=8080
+backend.ribbon.client.enabled=true
+backend.ribbon.client.ServerListRefreshInterval= 5000
+hystrix.command.BackendCall.execution.isolation.thread.timeoutInMilliseconds= 5000
+hystrix.threadpool.BackendCallThread.coreSize= 5
+spring.cloud.kubernetes.reload.enabled=true
