--- a/charts/spring-cloud-k8s-minion/templates/minion-config-map.yml
+++ b/charts/spring-cloud-k8s-minion/templates/minion-config-map.yml
@@ -4,33 +4,33 @@ metadata:
   name: {{ template "fullname" . }}
 data:
   application.properties: |-
-    minion.art="<p style=\" size:13px; font-family:'lucida grande', tahoma, verdana, arial, sans-serif; line-height:18px; color:black\">
-                               ──────────▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄<br/>
-                               ────────█═════════════════█<br/>
-                               ──────█═════════════════════█<br/>
-                               ─────█════════▄▄▄▄▄▄▄════════█<br/>
-                               ────█════════█████████════════█<br/>
-                               ────█═══════██▀─────▀██═══════█<br/>
-                               ───███████████──█▀█──███████████<br/>
-                               ───███████████──▀▀▀──███████████<br/>
-                               ────█═══════▀█▄─────▄█▀═══════█<br/>
-                               ────█═════════▀█████▀═════════█<br/>
-                               ────█═════════════════════════█<br/>
-                               ────█══════▀▄▄▄▄▄▄▄▄▄▀════════█<br/>
-                               ───▐▓▓▌═════════════════════▐▓▓▌<br/>
-                               ───▐▐▓▓▌▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▐▓▓▌▌<br/>
-                               ───█══▐▓▄▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▄▓▌══█<br/>
-                               ──█══▌═▐▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▌═▐══█<br/>
-                               ──█══█═▐▓▓▓▓▓▓▄▄▄▄▄▄▄▓▓▓▓▓▓▌═█══█<br/>
-                               ──█══█═▐▓▓▓▓▓▓▐██▀██▌▓▓▓▓▓▓▌═█══█<br/>
-                               ──█══█═▐▓▓▓▓▓▓▓▀▀▀▀▀▓▓▓▓▓▓▓▌═█══█<br/>
-                               ──█══█▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓█══█<br/>
-                               ─▄█══█▐▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▌█══█▄<br/>
-                               ─█████▐▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▌─█████<br/>
-                               ─██████▐▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▌─██████<br/>
-                               ──▀█▀█──▐▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▌───█▀█▀<br/>
-                               ─────────▐▓▓▓▓▓▓▌▐▓▓▓▓▓▓▌<br/>
-                               ──────────▐▓▓▓▓▌──▐▓▓▓▓▌<br/>
-                               ─────────▄████▀────▀████▄<br/>
-                               ─────────▀▀▀▀────────▀▀▀▀</p>"
+    minion.art="<p style=\" size:13px; font-family:'lucida grande', tahoma, verdana, arial, sans-serif; line-height:18px; color:black\">\
+                               ──────────▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄<br/>\
+                               ────────█═════════════════█<br/>\
+                               ──────█═════════════════════█<br/>\
+                               ─────█════════▄▄▄▄▄▄▄════════█<br/>\
+                               ────█════════█████████════════█<br/>\
+                               ────█═══════██▀─────▀██═══════█<br/>\
+                               ───███████████──█▀█──███████████<br/>\
+                               ───███████████──▀▀▀──███████████<br/>\
+                               ────█═══════▀█▄─────▄█▀═══════█<br/>\
+                               ────█═════════▀█████▀═════════█<br/>\
+                               ────█═════════════════════════█<br/>\
+                               ────█══════▀▄▄▄▄▄▄▄▄▄▀════════█<br/>\
+                               ───▐▓▓▌═════════════════════▐▓▓▌<br/>\
+                               ───▐▐▓▓▌▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▐▓▓▌▌<br/>\
+                               ───█══▐▓▄▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▄▓▌══█<br/>\
+                               ──█══▌═▐▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▌═▐══█<br/>\
+                               ──█══█═▐▓▓▓▓▓▓▄▄▄▄▄▄▄▓▓▓▓▓▓▌═█══█<br/>\
+                               ──█══█═▐▓▓▓▓▓▓▐██▀██▌▓▓▓▓▓▓▌═█══█<br/>\
+                               ──█══█═▐▓▓▓▓▓▓▓▀▀▀▀▀▓▓▓▓▓▓▓▌═█══█<br/>\
+                               ──█══█▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓█══█<br/>\
+                               ─▄█══█▐▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▌█══█▄<br/>\
+                               ─█████▐▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▌─█████<br/>\
+                               ─██████▐▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▌─██████<br/>\
+                               ──▀█▀█──▐▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▌───█▀█▀<br/>\
+                               ─────────▐▓▓▓▓▓▓▌▐▓▓▓▓▓▓▌<br/>\
+                               ──────────▐▓▓▓▓▌──▐▓▓▓▓▌<br/>\
+                               ─────────▄████▀────▀████▄<br/>\
+                               ─────────▀▀▀▀────────▀▀▀▀</p>"\
     minion.type=one-eyed-minion
