--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ backend.ribbon.client.ServerListRefreshInterval= 5000
 hystrix.command.BackendCall.execution.isolation.thread.timeoutInMilliseconds= 5000
 hystrix.threadpool.BackendCallThread.coreSize= 5
 spring.cloud.kubernetes.reload.enabled=true
+management.endpoint.restart.enabled=true
+management.endpoint.health.enabled=true
+management.endpoint.info.enabled=true
