--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ hystrix.threadpool.BackendCallThread.coreSize= 5
 spring.cloud.kubernetes.reload.enabled=true
 management.endpoints.web.exposure.include=*
 management.endpoint.restart.enabled=true
+spring.cloud.kubernetes.reload.strategy=refresh
+spring.cloud.kubernetes.reload.mode=polling
