--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ backend.ribbon.client.ServerListRefreshInterval= 5000
 hystrix.command.BackendCall.execution.isolation.thread.timeoutInMilliseconds= 5000
 hystrix.threadpool.BackendCallThread.coreSize= 5
 spring.cloud.kubernetes.reload.enabled=true
-management.endpoints.web.exposure.include=*
 management.endpoint.restart.enabled=true
-spring.cloud.kubernetes.reload.strategy=refresh
+spring.cloud.kubernetes.reload.strategy=restart_context
 spring.cloud.kubernetes.reload.mode=polling
+ribbon.eureka.enabled=false
