--- a/charts/spring-cloud-k8s-minion/templates/service.yaml
+++ b/charts/spring-cloud-k8s-minion/templates/service.yaml
@@ -15,5 +15,9 @@ spec:
     targetPort: {{ .Values.service.internalPort }}
     protocol: TCP
     name: {{ .Values.service.name }}
+  - port: {{ .Values.service.externalPort }}
+    targetPort: {{ .Values.service.internalPort }}
+    protocol: TCP
+    name: http
   selector:
     app: {{ template "fullname" . }}
