--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,6 @@ spring.cloud.kubernetes.reload.enabled=true
 management.endpoint.health.enabled=true
 management.endpoint.info.enabled=true
 management.endpoint.restart.enabled=true
-spring.cloud.kubernetes.reload.strategy=refresh
-spring.cloud.kubernetes.reload.mode=polling
+#spring.cloud.kubernetes.reload.strategy=restart_context
+#spring.cloud.kubernetes.reload.mode=polling
 ribbon.eureka.enabled=false
