--- a/charts/spring-cloud-k8s-minion/templates/minion-config-map.yaml
+++ b/charts/spring-cloud-k8s-minion/templates/minion-config-map.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ template "fullname" . }}
+  name: {{ .Values.service.name }}
 data:
   application.properties: |-
     minion.art="<p style=\" size:13px; font-family:'lucida grande', tahoma, verdana, arial, sans-serif; line-height:18px; color:black\">\
