--- a/charts/spring-cloud-k8s-minion/templates/service.yaml
+++ b/charts/spring-cloud-k8s-minion/templates/service.yaml
@@ -14,6 +14,7 @@ spec:
   - port: {{ .Values.service.externalPort }}
     targetPort: {{ .Values.service.internalPort }}
     protocol: TCP
-    name: {{ .Values.service.name }}
+    #name: {{ .Values.service.name }}
+    name: http
   selector:
     app: {{ template "fullname" . }}
