reverting service port name

--- a/charts/spring-cloud-k8s-minion/templates/service.yaml
+++ b/charts/spring-cloud-k8s-minion/templates/service.yaml
@@ -14,7 +14,6 @@ spec:
   - port: {{ .Values.service.externalPort }}
     targetPort: {{ .Values.service.internalPort }}
     protocol: TCP
-    #name: {{ .Values.service.name }}
-    name: http
+    name: {{ .Values.service.name }}
   selector:
     app: {{ template "fullname" . }}
