--- a/charts/spring-cloud-k8s-minion/templates/minion-config-map.yaml
+++ b/charts/spring-cloud-k8s-minion/templates/minion-config-map.yaml
@@ -4,5 +4,33 @@ metadata:
   name: {{ .Values.service.name }}
 data:
   application.properties: |-
-    minion.art=:)
+    minion.art="<p style=\" size:13px; font-family:'lucida grande', tahoma, verdana, arial, sans-serif; line-height:18px; color:black\">\
+                               ──────────▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄<br/>\
+                               ────────█═════════════════█<br/>\
+                               ──────█═════════════════════█<br/>\
+                               ─────█════════▄▄▄▄▄▄▄════════█<br/>\
+                               ────█════════█████████════════█<br/>\
+                               ────█═══════██▀─────▀██═══════█<br/>\
+                               ───███████████──█▀█──███████████<br/>\
+                               ───███████████──▀▀▀──███████████<br/>\
+                               ────█═══════▀█▄─────▄█▀═══════█<br/>\
+                               ────█═════════▀█████▀═════════█<br/>\
+                               ────█═════════════════════════█<br/>\
+                               ────█══════▀▄▄▄▄▄▄▄▄▄▀════════█<br/>\
+                               ───▐▓▓▌═════════════════════▐▓▓▌<br/>\
+                               ───▐▐▓▓▌▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▐▓▓▌▌<br/>\
+                               ───█══▐▓▄▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▄▓▌══█<br/>\
+                               ──█══▌═▐▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▌═▐══█<br/>\
+                               ──█══█═▐▓▓▓▓▓▓▄▄▄▄▄▄▄▓▓▓▓▓▓▌═█══█<br/>\
+                               ──█══█═▐▓▓▓▓▓▓▐██▀██▌▓▓▓▓▓▓▌═█══█<br/>\
+                               ──█══█═▐▓▓▓▓▓▓▓▀▀▀▀▀▓▓▓▓▓▓▓▌═█══█<br/>\
+                               ──█══█▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓█══█<br/>\
+                               ─▄█══█▐▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▌█══█▄<br/>\
+                               ─█████▐▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▌─█████<br/>\
+                               ─██████▐▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▌─██████<br/>\
+                               ──▀█▀█──▐▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▌───█▀█▀<br/>\
+                               ─────────▐▓▓▓▓▓▓▌▐▓▓▓▓▓▓▌<br/>\
+                               ──────────▐▓▓▓▓▌──▐▓▓▓▓▌<br/>\
+                               ─────────▄████▀────▀████▄<br/>\
+                               ─────────▀▀▀▀────────▀▀▀▀</p>"\
     minion.type=one-eyed-minion
