--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,6 @@ spring.cloud.kubernetes.reload.enabled=true
 management.endpoint.health.enabled=true
 management.endpoint.info.enabled=true
 management.endpoint.restart.enabled=true
+ribbon.eureka.enabled=false
 #spring.cloud.kubernetes.reload.strategy=restart_context
 #spring.cloud.kubernetes.reload.mode=polling
