--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,6 @@ management.endpoint.health.enabled=true
 management.endpoint.info.enabled=true
 management.endpoint.restart.enabled=true
 ribbon.eureka.enabled=false
+ribbon.eager-load.enabled=true
 #spring.cloud.kubernetes.reload.strategy=restart_context
 #spring.cloud.kubernetes.reload.mode=polling
