--- a/charts/spring-cloud-k8s-minion/templates/service.yaml
+++ b/charts/spring-cloud-k8s-minion/templates/service.yaml
@@ -16,4 +16,4 @@ spec:
     protocol: TCP
     name: {{ .Values.service.name }}
   selector:
-    app: {{ template "fullname" . }}
+    app: {{ .Values.service.name }}
