--- a/charts/spring-cloud-k8s-minion/templates/deployment.yaml
+++ b/charts/spring-cloud-k8s-minion/templates/deployment.yaml
@@ -42,4 +42,4 @@ spec:
         resources:
 {{ toYaml .Values.resources | indent 12 }}
       terminationGracePeriodSeconds: {{ .Values.terminationGracePeriodSeconds }}
-      serviceAccountName: {{ .Chart.Name }}
+      serviceAccountName: {{ .Values.service.name }}
