--- a/charts/spring-cloud-k8s-minion/templates/serviceaccount.yaml
+++ b/charts/spring-cloud-k8s-minion/templates/serviceaccount.yaml
@@ -6,4 +6,4 @@ metadata:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
-  name: {{ .Chart.Name }}
+  name: {{ .Values.service.name }}
