--- a/charts/spring-cloud-k8s-minion/values.yaml
+++ b/charts/spring-cloud-k8s-minion/values.yaml
@@ -13,21 +13,22 @@ service:
   internalPort: 8080
   annotations:
     fabric8.io/expose: "true"
+    fabric8.io/ingress.annotations: "kubernetes.io/ingress.class: nginx"
 resources:
   limits:
     cpu: 500m
-    memory: 768Mi
+    memory: 512Mi
   requests:
     cpu: 400m
     memory: 512Mi
 probePath: /actuator/health
 livenessProbe:
-  initialDelaySeconds: 90
+  initialDelaySeconds: 60
   periodSeconds: 10
   successThreshold: 1
   timeoutSeconds: 1
 readinessProbe:
-  periodSeconds: 70
+  periodSeconds: 10
   successThreshold: 1
   timeoutSeconds: 1
 terminationGracePeriodSeconds: 10
