--- a/charts/spring-cloud-k8s-minion/templates/service.yaml
+++ b/charts/spring-cloud-k8s-minion/templates/service.yaml
@@ -18,6 +18,6 @@ spec:
   - port: {{ .Values.service.externalPort }}
     targetPort: {{ .Values.service.internalPort }}
     protocol: TCP
-    name: http
+    name: {{ .Values.service.name }}
   selector:
-    app: {{ template "fullname" . }}
+    app: {{ .Values.service.name }}
