--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,9 @@
     <java.version>1.8</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <spring-boot.version>2.0.3.RELEASE</spring-boot.version>
-    <spring-cloud.version>Finchley.RELEASE</spring-cloud.version>
-    <spring.cloud.k8s.version>0.3.0.RC1</spring.cloud.k8s.version>
+    <spring-boot.version>2.0.4.RELEASE</spring-boot.version>
+    <spring-cloud.version>Finchley.SR1</spring-cloud.version>
+    <spring.cloud.k8s.version>0.3.0.RELEASE</spring.cloud.k8s.version>
     <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
   </properties>
 
