adapting service acounts' name

--- a/charts/spring-cloud-k8s-minion/templates/role-bindings.yaml
+++ b/charts/spring-cloud-k8s-minion/templates/role-bindings.yaml
@@ -9,5 +9,5 @@ roleRef:
   name: {{ .Chart.Name }}
 subjects:
 - kind: ServiceAccount
-  name: {{ .Chart.Name }}
+  name: {{ .Values.service.name }}
   namespace: {{ .Release.Namespace }}
